--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li>TIC TAC TOE by Shalini Mudaliyar</li>
+            <li>TIC TAC TOE</li>
         </ul>
     </nav>
 <div class="disp">
